@@ -373,3 +373,76 @@ AC_DEFUN([AX_OPENMP],
   AM_CONDITIONAL(HAVE_OPENMP, test "x${enable_openmp}" = "xyes" -a "x$ax_cv_[]_AC_LANG_ABBREV[]_openmp" != "xunknown")
 ])
 
+# AX_LIBTOOLS
+# -----------
+AC_DEFUN([AX_LIBTOOLS],
+[
+
+  HaveLibtools="yes"
+  AC_MSG_CHECKING([for libtools])
+  AC_ARG_WITH(libtools,
+        AC_HELP_STRING(
+                [--with-libtools@<:@=ARG@:>@],
+                [Specify where libtools (libparaverconfig and libparavertraceparser) are installed]
+        ),
+        [LibToolsDir="$withval"],
+        [LibToolsDir=""]
+  )
+  if test ! -d ${LibToolsDir} ; then
+        AC_MSG_ERROR([Invalid directory specified in --with-libtools])
+  fi
+  if test ! -f ${LibToolsDir}/include/ParaverRecord.h -o ! -f ${LibToolsDir}/include/ParaverTrace.h ; then
+        HaveLibtools="no"
+        AC_MSG_WARN([Cannot find some header files of the libtools! Make sure that --with-libtools is pointing to the correct place.])
+  else
+        AC_MSG_RESULT([found in ${LibToolsDir}])
+  fi
+
+  AC_MSG_CHECKING([for libtools libraries placement])
+  if test -f ${LibToolsDir}/lib/libparavertraceconfig.a -a \
+          -f ${LibToolsDir}/lib/libparavertraceparser.a ; then
+          LibToolsDir_Lib=${LibToolsDir}/lib
+          AC_MSG_RESULT([found in ${LibToolsDir_Lib}])
+  elif test -f ${LibToolsDir}/lib64/libparavertraceconfig.a -a \
+            -f ${LibToolsDir}/lib64/libparavertraceparser.a; then
+          LibToolsDir_Lib=${LibToolsDir}/lib64
+          AC_MSG_RESULT([found in ${LibToolsDir_Lib}])
+  else
+          HaveLibtools="no"
+          AC_MSG_WARN([Cannot find libparavertraceconfig.a! Make sure that --with-libtools is pointing to the correct place.])
+  fi
+
+  AC_MSG_CHECKING([whether libtools libraries have shared versions])
+  if test -f ${LibToolsDir_Lib}/libparavertraceconfig.so -a \
+          -f ${LibToolsDir_Lib}/libparavertraceparser.so ; then
+          LibToolsDir_HasShared="yes"
+  else
+          LibToolsDir_HasShared="no"
+  fi
+  AC_MSG_RESULT([${LibToolsDir_HasShared}])
+
+  AC_MSG_CHECKING([for prvparser-config])
+  if test ! -f ${LibToolsDir}/bin/prvparser-config ; then
+    HaveLibtools = "no"
+  fi
+  
+  if test "${HaveLibtools}" = "yes" ; then
+    LIBTOOLS_DIR=${LibToolsDir}
+    LIBTOOLS_LIB_DIR=${LibToolsDir_Lib}
+    LIBTOOLS_CFLAGS="-I$LIBTOOLS_DIR/include"
+    LIBTOOLS_CXXFLAGS="-I$LIBTOOLS_DIR/include"
+    LIBTOOLS_LDFLAGS="-L$LIBTOOLS_LIB_DIR -lparavertraceparser"
+    PRVPARSER_CONFIG="${LibToolsDir}/bin/prvparser-config"
+    AC_SUBST(LIBTOOLS_DIR)
+    AC_SUBST(LIBTOOLS_LIB_DIR)
+    AC_SUBST(LIBTOOLS_CFLAGS) 
+    AC_SUBST(LIBTOOLS_CXXFLAGS)
+    AC_SUBST(LIBTOOLS_LDFLAGS)
+    AC_SUBST(PRVPARSER_CONFIG)
+    AC_DEFINE(HAVE_LIBTOOLS, 1,[Define if libtools are available])
+  fi
+
+  AM_CONDITIONAL(LIBTOOLS_HAS_SHARED_LIBRARIES, test "${LibToolsDir_HasShared}" = "yes")
+  AM_CONDITIONAL(HAVE_LIBTOOLS, test "${HaveLibtools}" = "yes")
+])
+
