@@ -21,6 +21,10 @@ typedef struct
   long long int value;
 } semantic_t;
 
+#if defined(__cplusplus)
+extern "C" {
+#endif
+
 void Sampler_wavelet (signal_t *signal, spectral_value_t **waveletSignal, int number_of_points, char *dbg_file);
 
 signal_t * Cutter_signal (signal_t *signal, long long int t0, long long int t1, signal_data_t *maximum_point, char *dbg_file);
@@ -56,6 +60,8 @@ signal_t * Generate_IPC_Signal(char *trace, char *filtered_trace, char *dbg_file
 signal_t * Generate_MPIp2p_Signal(char *trace, char *filtered_trace, char *dbg_file);
 void Generate_Running_Signals (char *input_trace, char *filtered_trace, long long int min_time, signal_t **signal_in_running_out, char *dbg_file_in_running, signal_t **signal_dur_running_out, char *dbg_file_dur_running);
 
-
+#if defined(__cplusplus)
+}
+#endif
 
 #endif /* __OPTIM_FUNCTIONS_H__ */
