@@ -1,0 +1,8 @@
+#ifndef __RECONSTRUCT_TRACE_H__
+#define __RECONSTRUCT_TRACE_H__
+
+#include "spectral-api.h"
+
+void Reconstruct(char *input_trace, int num_detected_periods, Period_t **detected_periods);
+
+#endif /* __RECONSTRUCT_TRACE_H__ */
