@@ -1,6 +1,14 @@
 #ifndef __WAVELET_H__
 #define __WAVELET_H__
 
+#if defined(__cplusplus)
+extern "C" {
+#endif
+
 void Wavelet (double *inOut, int n, int *size, char *dbg_file);
+
+#if defined(__cplusplus)
+}
+#endif
 
 #endif /* __WAVELET_H__ */
